Whack ass total calculation when adding from form

--- a/src/app/expense-filter/expense-filter.component.html
+++ b/src/app/expense-filter/expense-filter.component.html
@@ -5,5 +5,5 @@
             <option [value]="category">{{category}}</option>
         }
     </select>
-    <p>{{selectedCategory}}</p>
+    <!-- <p>{{selectedCategory}}</p> -->
 </div>
