--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -7,7 +7,7 @@
     </div>
     <div>
         <label for="Amount">Amount</label>
-        <input type='number 'id="amount" placeholder="Amount" [(ngModel)]="expense.amount">
+        <input type='number 'id="amount" placeholder="Amount" [(ngModel)]="fuckedAmount">
     </div>
     <div>
         <label for="Category">Category</label>
@@ -20,4 +20,4 @@
     </div>
     <button type="button" (click)="addExpense()">Save</button>
 </div>
-<app-messages></app-messages>
+
